Opened 16 years ago
Closed 16 years ago
#3338 closed bug (fixed)
[Media preflet] Audio volume doesn't change live with moving the slider
Reported by: | Adek336 | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Media | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In Media preflet, click and hold mouse button on audio volume slider and drag it up and down. Until you release it, the volume does not change.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev29151.